fix: overflow x hidden

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -25,6 +25,7 @@
 
 html {
   color-scheme: dark;
+  overflow-x: hidden;
 }
 
 .main-padding {
